datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

model User {
  id                 String    @id @default(cuid())
  tenant_id          String?
  email              String    @unique
  password_hash      String
  first_name         String
  last_name          String
  phone              String?
  role               UserRole  @default(WAREHOUSE_OPERATOR)
  is_active          Boolean   @default(true)
  is_email_verified  Boolean   @default(false)
  failed_login_count Int       @default(0)
  locked_until       DateTime?

  tenant          Tenant?         @relation(fields: [tenant_id], references: [id], onDelete: SetNull)
  user_warehouses UserWarehouse[]
  stock_movements StockMovement[]
  audit_logs      AuditLog[]
  price_histories PriceHistory[]
  refresh_tokens  RefreshToken[]
  auth_tokens     AuthToken[]

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@index([email])
  @@index([tenant_id])
  @@index([role])
}

model Tenant {
  id        String  @id @default(cuid())
  name      String
  slug      String  @unique
  is_active Boolean @default(false)

  users      User[]
  warehouses Warehouse[]
  products   Product[]

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@index([slug])
  @@index([is_active])
}

enum UserRole {
  MANAGER
  WAREHOUSE_OPERATOR
  AUDITOR
  SYSTEM_ADMIN
}

model AuthToken {
  id         String        @id @default(cuid())
  user_id    String
  token_hash String        @unique
  type       AuthTokenType
  expires_at DateTime
  used_at    DateTime?

  user User @relation(fields: [user_id], references: [id], onDelete: Cascade)

  created_at DateTime @default(now())

  @@index([user_id])
  @@index([token_hash])
  @@index([type])
  @@index([expires_at])
}

enum AuthTokenType {
  EMAIL_VERIFICATION
  PASSWORD_RESET
}

model RefreshToken {
  id         String   @id @default(cuid())
  token      String   @unique
  user_id    String
  expires_at DateTime
  revoked    Boolean  @default(false)
  user       User     @relation(fields: [user_id], references: [id], onDelete: Cascade)
  created_at DateTime @default(now())

  @@index([token])
  @@index([user_id])
}

model Warehouse {
  id        String          @id @default(cuid())
  tenant_id String
  name      String
  country   String
  city      String
  status    WarehouseStatus @default(ACTIVE)
  is_hidden Boolean         @default(false)
  hidden_at DateTime?

  tenant          Tenant          @relation(fields: [tenant_id], references: [id], onDelete: Restrict)
  locations       Location[]
  user_warehouses UserWarehouse[]

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@unique([tenant_id, name])
  @@index([tenant_id])
  @@index([status])
  @@index([is_hidden])
}

enum WarehouseStatus {
  ACTIVE
  CLOSED
  MAINTENANCE
}

model UserWarehouse {
  id           String        @id @default(cuid())
  user_id      String
  warehouse_id String
  role         WarehouseRole

  user      User      @relation(fields: [user_id], references: [id], onDelete: Cascade)
  warehouse Warehouse @relation(fields: [warehouse_id], references: [id], onDelete: Cascade)

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@unique([user_id, warehouse_id])
  @@index([warehouse_id])
}

enum WarehouseRole {
  MANAGER
  WAREHOUSE_OPERATOR
  AUDITOR
}

model Location {
  id             String @id @default(cuid())
  warehouse_id   String
  name           String
  address        String?
  capacity_units Int    @default(1000)
  current_volume Int    @default(0)

  warehouse          Warehouse       @relation(fields: [warehouse_id], references: [id], onDelete: Cascade)
  inventory_stocks   Inventory[]
  outgoing_movements StockMovement[] @relation("FromLocation")
  incoming_movements StockMovement[] @relation("ToLocation")
  price_histories    PriceHistory[]
  decay_audits       DecayAudit[]

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@unique([warehouse_id, name])
  @@index([warehouse_id])
  @@index([current_volume])
}

model Product {
  id                  String  @id @default(cuid())
  tenant_id           String
  sku                 String
  name                String
  description         String? @db.Text
  category            String
  base_price          Decimal @db.Decimal(12, 2)
  discount_percentage Int     @default(0)
  is_discontinued     Boolean @default(false)
  sold_count          Int     @default(0)

  tenant           Tenant          @relation(fields: [tenant_id], references: [id], onDelete: Restrict)
  inventory_stocks Inventory[]
  stock_movements  StockMovement[]
  price_histories  PriceHistory[]
  decay_audits     DecayAudit[]

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@unique([tenant_id, sku])
  @@index([tenant_id])
  @@index([sku])
  @@index([category])
  @@index([is_discontinued])
}

model Inventory {
  id               String    @id @default(cuid())
  product_id       String
  location_id      String
  quantity_on_hand Int       @default(0)
  quantity_reserved Int      @default(0)
  reorder_point    Int       @default(50)
  max_stock_level  Int       @default(500)
  last_sold_at     DateTime?

  product       Product       @relation(fields: [product_id], references: [id], onDelete: Restrict)
  location      Location      @relation(fields: [location_id], references: [id], onDelete: Restrict)
  inventory_lots InventoryLot[]

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@unique([product_id, location_id])
  @@index([location_id])
  @@index([product_id])
  @@index([quantity_on_hand])
  @@index([last_sold_at])
}

model InventoryLot {
  id                    String    @id @default(cuid())
  inventory_id          String
  parent_lot_id         String?
  lot_code              String    @unique
  quantity_received     Int
  quantity_on_hand      Int       @default(0)
  quantity_reserved     Int       @default(0)
  unit_cost             Decimal   @db.Decimal(12, 2)
  received_at           DateTime  @default(now())
  expires_at            DateTime?
  last_decay_applied_at DateTime?

  inventory  Inventory     @relation(fields: [inventory_id], references: [id], onDelete: Restrict)
  parent_lot InventoryLot? @relation("LotLineage", fields: [parent_lot_id], references: [id], onDelete: SetNull)
  child_lots InventoryLot[] @relation("LotLineage")
  decay_audits DecayAudit[]

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@index([inventory_id, received_at])
  @@index([received_at])
  @@index([last_decay_applied_at])
  @@index([quantity_on_hand])
  @@index([parent_lot_id])
}

model StockMovement {
  id               String         @id @default(cuid())
  product_id       String
  user_id          String
  from_location_id String?
  to_location_id   String?
  quantity         Int            @default(1)
  movement_type    MovementType
  status           MovementStatus @default(PENDING)
  reason           String?

  product       Product   @relation(fields: [product_id], references: [id], onDelete: Restrict)
  user          User      @relation(fields: [user_id], references: [id], onDelete: Restrict)
  from_location Location? @relation("FromLocation", fields: [from_location_id], references: [id], onDelete: SetNull)
  to_location   Location? @relation("ToLocation", fields: [to_location_id], references: [id], onDelete: SetNull)

  created_at   DateTime  @default(now())
  approved_at  DateTime?
  completed_at DateTime?
  updated_at   DateTime  @updatedAt

  @@index([product_id])
  @@index([user_id])
  @@index([from_location_id])
  @@index([to_location_id])
  @@index([status])
  @@index([movement_type])
  @@index([created_at])
}

enum MovementType {
  INCOMING
  OUTGOING
  TRANSFER
  ADJUSTMENT
  WRITE_OFF
}

enum MovementStatus {
  PENDING
  APPROVED
  IN_TRANSIT
  COMPLETED
  REJECTED
}

model PriceHistory {
  id                  String            @id @default(cuid())
  product_id          String
  location_id         String?
  user_id             String
  price               Decimal           @db.Decimal(12, 2)
  discount_percentage Int               @default(0)
  reason              PriceChangeReason
  effective_from      DateTime          @default(now())
  effective_to        DateTime?

  product  Product   @relation(fields: [product_id], references: [id], onDelete: Restrict)
  location Location? @relation(fields: [location_id], references: [id], onDelete: SetNull)
  user     User      @relation(fields: [user_id], references: [id], onDelete: Restrict)

  created_at DateTime @default(now())

  @@index([product_id])
  @@index([location_id])
  @@index([effective_from])
  @@index([effective_to])
}

enum PriceChangeReason {
  BASE_PRICE
  SEASONAL
  PROMOTION
  DEAD_STOCK_DECAY
  MANUAL_ADJUSTMENT
}

model DecayAudit {
  id                   String   @id @default(cuid())
  inventory_lot_id     String
  product_id           String
  location_id          String?
  old_discount_pct     Int
  new_discount_pct     Int
  days_in_inventory    Int
  automatic_trigger_at DateTime

  inventory_lot InventoryLot @relation(fields: [inventory_lot_id], references: [id], onDelete: Restrict)
  product       Product      @relation(fields: [product_id], references: [id], onDelete: Restrict)
  location      Location?    @relation(fields: [location_id], references: [id], onDelete: SetNull)

  created_at DateTime @default(now())

  @@index([inventory_lot_id])
  @@index([product_id])
  @@index([location_id])
  @@index([created_at])
}

model AuditLog {
  id          String  @id @default(cuid())
  user_id     String
  action      String
  entity_type String
  entity_id   String
  old_value   Json?
  new_value   Json?
  reason      String?
  ip_address  String?
  user_agent  String?

  user User @relation(fields: [user_id], references: [id], onDelete: Restrict)

  created_at DateTime @default(now())

  @@index([user_id])
  @@index([entity_type])
  @@index([entity_id])
  @@index([created_at])
  @@index([action])
}
